--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -159,6 +159,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".StripePaymentActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
