--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation('com.google.firebase:firebase-database')
-    
+    implementation 'com.google.android.material:material:1.11.0'
+
 }
